--- a/ankita12.html
+++ b/ankita12.html
@@ -178,7 +178,7 @@ font-size: 16px;
 </small>
 </p>
 </div>
-<button>Like</button>
+<button class="btn btn-default" style="margin="2px 2px 2px 2px;">Like</button>
 <div class="second  show-description">
 <p>Jaipur City Palace<span class="price">$24</span><br />
 <small>The City Palace is a splendid example of the foresight that Maharaja Sawai Jai Singh II had. As the founder of Jaipur, he took pains to create a magnificent walled city that encloses marvels such as the City Palace. The palace is a beautiful blend of Mughal and Rajput styles of architecture. The previous royal family continues to reside in one section of the palace. Located within the walls of the City Palace, Chandra Mahal is a seven-storeyed tower. However, the ground and first floors have now been given over for the Maharaja Sawai Man Singh II Museum.
